packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/snapshots/qianji__tests__lint__bpmn_dmn__qianji_lint_compact_redundant_user_answer_store_fix.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn.rs
assertion_line: 1300
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/redundant_answer_store.bpmn bpmn
Source: $TEMP/redundant_answer_store.bpmn
Issues: 1

[bpmn.redundant_user_answer_store_service_task] Error: User answer store serviceTask should not invoke an LLM
    ,-[ $TEMP/redundant_answer_store.bpmn:22:5 ]
 22 |    <bpmn:serviceTask id="store_contact" name="Store Contact" implementation="${environment.services.runAgent}">
    |    `------------------------------------------------------------------------------------------------------------ store serviceTask should not invoke an LLM
    |Help: Remove this store task; use 'contactResult' directly instead of 'contactInfo'.
    |Contract: qianji.bpmn.host_task.scope.v1 requires userTask answer persistence to use the qianji result variable directly; no-tool store serviceTasks must not call an LLM.

Expected XML:
```xml
<!-- Delete serviceTask 'store_contact' and its adjacent sequenceFlow(s). -->
<sequenceFlow id="Flow_collect_contact_collect_visit" sourceRef="collect_contact" targetRef="collect_visit"/>
<!-- In downstream qianji:inputs, replace `contactInfo` with `contactResult`. -->
```

Return unified diff only.
