packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/snapshots/qianji__tests__lint__bpmn_dmn__qianji_lint_compact_unbound_dynamic_choices_input_fix.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/unbound_dynamic_choices_input.bpmn bpmn
Source: $TEMP/unbound_dynamic_choices_input.bpmn
Issues: 1

[bpmn.dynamic_qianji_interaction_producer_unbound_inputs] Error: Dynamic qianji choices producer does not bind declared inputs
   ,-[ $TEMP/unbound_dynamic_choices_input.bpmn:7:5 ]
 7 |    <bpmn:serviceTask id="prepare_visit_category" implementation="${environment.services.runAgent}">
   |    `------------------------------------------------------------------------------------------------ dynamic choices producer must bind qianji:inputs by name
   |Help: Reference 'contactInfo' in this producer prompt, or inline fixed choices on userTask 'ask_visit_category'.
    |Contract: qianji.bpmn.user_task.interaction.v1 requires dynamic choices producers to reference every declared qianji:inputs name in qianji:prompt; fixed choices must be static userTask interaction XML.

Expected XML:
```xml
<!-- Remove serviceTask 'prepare_visit_category' and reconnect its incoming sequenceFlow(s) directly to userTask 'ask_visit_category'. -->
<userTask id="ask_visit_category">
  <extensionElements>
    <qianji:config>
      <!-- Remove stale qianji:inputs value(s): currentQuestion,currentChoices. -->
      <qianji:inputs></qianji:inputs>
      <qianji:interaction type="choice">
        <qianji:question>Write the user-facing question text here.</qianji:question>
        <qianji:choice value="option_value" label="Option label">Optional concise help text.</qianji:choice>
        <qianji:choice value="other_value" label="Other option">Optional concise help text.</qianji:choice>
        <qianji:result output="visitCategoryResult"/>
      </qianji:interaction>
    </qianji:config>
  </extensionElements>
</userTask>
```

Return unified diff only.
